--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.127.60.92:9000/</sonar.host.url>
+		<sonar.host.url>http://http://172.31.44.149:9000/</sonar.host.url>
                 <sonar.login>f5eaaf27f3cf7fa8a8b459dd2d3617d0d72b05c8</sonar.login>
 		<!--
 		<sonar.login>admin</sonar.login>
@@ -101,13 +101,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://15.207.222.238:8080/repository/facebook-release/</url>
+	      <url>http:http://172.31.11.43:8080/repository/facebook-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://15.207.222.238:8080/repository/facebook-snapshot/</url>
+	      <url>http://172.31.11.43:8080/repository/facebook-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
