--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.233.65.160:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>admin123</sonar.password> 
+		<sonar.host.url>http://43.204.108.150:9000/</sonar.host.url>
+		<sonar.login>rameshagk</sonar.login>
+		<sonar.password>Rameshagk123</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>maven-web-application-release-repo</name>
-	      <url>http://13.233.128.135:8081/repository/maven-web-application/</url>
+	      <url>http://3.6.91.173:8081/repository/maven-web-application/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Maven-web-pplication-snapshot-repo</name>
-	      <url>http://13.233.128.135:8081/repository/maven-web-application-Snapshot/</url>
+	      <url>http://3.6.91.173:8081/repository/maven-web-application-Snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
